[package]
name = "beam-rs"
version = "0.1.0"
authors = ["gpestana <g6pestana@gmail.com>"]
edition = "2018"

[dependencies]
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false } 
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }

rand = "0.7"

[dev-dependencies]
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", rev = "39c58df", default-features = false, features = ["curve"] }
